crates/solidity-v2/testing/snapshots/diagnostics_output/structure/contract_should_be_abstract/unimplemented_modifier/generated/solc/0.8.31-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[Warning 8429] Warning: Virtual modifiers are deprecated and scheduled for removal.
   ╭─[input.sol:7:5]
   │
 7 │     modifier m virtual;
   │     ─────────┬─────────  
   │              ╰─────────── Error occurred here.
───╯

[TypeError 3656] Error: Contract "A" should be marked as abstract.
   ╭─[input.sol:6:1]
   │
 6 │ ╭─▶ contract A {
   ┆ ┆   
 8 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
